# IgcViewer

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  GCompileAndPack.sh  IgcViewer.deb  Makefile  README.md  TODO.md  control  pyproject.toml
.github/workflows/: c-cpp.yml
igcviewer/: Makefile  pyproject.toml
igcviewer/src/igcviewer/: __init__.py  __main__.py  bridge.py  main.py  parser.py
igcviewer/src/igcviewer/qml/: AltitudeChart.qml  FlightMap.qml  Main.qml  StatsCard.qml  Theme.qml  igcviewer.qmltypes  qmldir
scripts/: dev.py  dev_altitude_chart.py
src/: IgcViewer.cpp
src/igcviewer/: __main__.py  bridge.py  main.py  models.py  parser.py  paths.py
src/igcviewer/qml/: AltitudeChart.qml  AltitudeChartHarness.qml  AltitudeChartV2.qml  AltitudeChartV2Harness.qml  AppToolTip.qml  CesiumWindow.qml  CesiumWindowHarness.qml  FancySlider.qml  FlightMap.qml  FlightMapHarness.qml  Main.qml  MapButton.qml  StatsCard.qml  StatsPanel.qml  StatsPanelHarness.qml  Theme.qml  igcviewer.qmltypes  qmldir
src/igcviewer/qml/cesium/: cesium_view.html
tests/data/: 2025-04-14-pgpilot.igc  2026-05-07-XCT-SEB-01.igc  2026-07-15-federico-ghezzi.igc  2026-07-19-kribac.igc
